@@ -522,6 +522,27 @@ s_link *getLinkForArea(s_fidoconfig config, char *addr, s_area *area) {
 	return NULL;
 }
 
+s_link *getLinkForFileArea(s_fidoconfig config, char *addr, s_filearea *area) {
+	s_addr aka;
+	UINT i;
+	
+	string2addr(addr, &aka);
+	
+	// we must find "right" link
+	for (i = 0; i< config.linkCount; i++) {
+		if (addrComp(aka, config.links[i].hisAka)==0 &&
+			addrComp(*area->useAka, *config.links[i].ourAka)==0)
+			return &(config.links[i]);
+	}
+	
+	// backward compatibility
+	for (i = 0; i< config.linkCount; i++) {
+	    if (addrComp(aka, config.links[i].hisAka)==0) return &(config.links[i]);
+	}
+	
+	return NULL;
+}
+
 s_addr *getAddr(s_fidoconfig config, char *addr) {
    s_addr aka;
    UINT i;
