@@ -3,6 +3,12 @@ fidoconfig 0.10
 (released on Mon May 22 14:58:56 CEST 2000)
 
 ----- cvs ci ------
+Fri Sep 15 15:47:22 NOVST 2000
+max:
+* choose "right" link for filearea
+  (if exist... echo->useAka & link->ourAka must be the same)
+
+----- cvs ci ------
 Fri Sep  8 17:11:07 NOVST 2000
 max (patch from PG):
 * fixed include parsing
